Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/DefiniteAssignment/T4725725.out
T4725725.java:13:21: compiler.err.var.might.not.have.been.initialized: x
1 error
